--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,25 @@
 
 
 
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.0.4"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1")
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.32"
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
+
+
+
 plugins {
     id 'com.android.application' version '7.1.1' apply false
     id 'com.android.library' version '7.1.1' apply false
